New client register

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -19,6 +19,6 @@ p.register-text {
 	
 	border: 1px solid transparent;
 	padding: 10px;
-	background-color: #3366cc;
+	background-color: #336699;
 	border-radius: 6px;
 }
